@@ -26,7 +26,6 @@ From the dropdown, select JUnit5 and click finish. JUnit will be added to your c
 
 3. There are also some dependencies on external jars for this project. These jar files are included in the github submission, but can also be found at the referenced links below:
 json-20190722.jar - https://github.com/stleary/JSON-java
-jfxswt.jar https://github.com/jdrich79/WeatherApp_wFX/tree/master/JavaFX_Jar
 
 In the Project Properties menu, select Classpath and Click "Add External Jars..."
 ![alt text](/ReadMeImages/AddJar.PNG "Jar")
@@ -36,3 +35,45 @@ This opens a file explorer window were you can navigate to the folder where the 
 These files will now be on the classpath. CLick "Apply and Close" to exit the properties menu and have these changes take effect.
 ![alt text](/ReadMeImages/Properties.PNG "Properties")
 
+4. Install the JavaFX library to be able to run the GUI
+ 1.	In Eclipse, go to Help > Eclipse Marketplace
+ 2.	In the market place search for “fx”
+![alt text](/ReadMeImages/Marketplace.PNG "Marketplace")
+ 3.	Install the option called e(fx)clipse 3.6.0
+ 4.	Accept the License and Agreement and click “Finish”
+![alt text](/ReadMeImages/TNC.PNG "Marketplace")
+ 5.	This will install and ask you to restart eclipse
+ 6.	Download the JavaFX SDK for your operating system from Gluon
+    a.	https://gluonhq.com/products/javafx/
+ 7.	Extract the files to a directory on your local system
+ 8.	Once eclipse restarts, Got to Window > Preferences 
+ 9.	This will open a new window where you should navigate to Java > Build Path > User Libraries
+ 10.	Once In User Libraries, click “New…” and name the library JavaFX
+ ![alt text](/ReadMeImages/UserLib.PNG "User Library")
+ 11.	After making the JavaFX library, click “Add External Jars…"
+ ![alt text](/ReadMeImages/UserLibExternal.PNG "User Library")
+ 12.	This will open the file explorer (Windows) where you should navigate to the folder where all the .jars from Gluon were stored
+ 13.	Select all of the files and click add
+ ![alt text](/ReadMeImages/FileExplorer.PNG "User Library")
+ 14.	The jar files should be listed in the user library, click apply and close
+ ![alt text](/ReadMeImages/UserLibJars.PNG "User Library")
+ 15.	Right click on the Java Project where JavaFx should be added and select properties
+ 16.	Click on Module Path
+ ![alt text](/ReadMeImages/Properties.PNG "Properties")
+ 17.	Add Library… > JavaFx Library
+  ![alt text](/ReadMeImages/JavaFXLib.PNG "Properties")
+  18.	Click “Finish”
+ 19.	Click on Classpath
+ 20.	Click on Add Library… > User Library
+ 21.	Select JavaFX and Click Finish
+  ![alt text](/ReadMeImages/AddUserLib.PNG "Properties")
+  22.	Click apply and close
+  23.	Finally, you need to add the path to the jar files to your run configuration. Right click the “main” class that runs the project    (Main_Weather.java) and select Run As > Run Configuration. Ensure that the correct Class is selected and go to the arguments tab
+    ![alt text](/ReadMeImages/RunConfig.PNG "Properties")
+    24.	In the VM Arguments section, enter the below text with the /path/to/files/lib replaced with the location of the downloaded gluon          files on your local desktop.
+    a.	--module-path "\path\to\javafx-sdk-14\lib" --add-modules javafx.controls,javafx.fxml
+    b.	Ex: --module-path "C:\Users\Bryan Rogers\Dropbox\MCIT\CIT 591\Final Project\openjfx-14_windows-x64_bin-sdk\javafx-sdk-14\lib" --        add-modules javafx.controls,javafx.fxml
+25.	Click run
+
+
+Running the Program:
